infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mufaddal-info-service
spec:
  selector:
    app: mufaddal-info
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
