infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mufaddal-info-ingress
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    networking.gke.io/managed-certificates: "mufaddal-info-cert"
spec:
  rules:
  - host: mufaddal.info
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: mufaddal-info-service
            port:
              number: 80
  - host: www.mufaddal.info
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: mufaddal-info-service
            port:
              number: 80
